styles and added skeleton for cards + basic responsive css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="reset.css">
     <meta charset="UTF-8">
@@ -17,7 +18,40 @@
     </header>
 
     <main class="main">
-        <h1> a </h1>
+        <div class="signup-cards">
+            <div class="start-card">
+
+                <form id="form" action="submit">
+                    <span> Enter your name!</span>
+                    <input type="text" required>
+                    <input type="radio" name="icon" id="" required>
+                    <input type="radio" name="icon" id="">
+                    <input type="radio" name="icon" id="">
+                    <input type="radio" name="icon" id="">
+                    <button type="submit"> Ready</button>
+                </form>
+
+            </div>
+
+            <div class="start-card">
+
+                <form id="form" action="submit">
+                    <span> Enter your name!</span>
+                    <input type="text" required>
+                    <input type="radio" name="icon" id="" required>
+                    <input type="radio" name="icon" id="">
+                    <input type="radio" name="icon" id="">
+                    <input type="radio" name="icon" id="">
+                    <button type="submit"> Ready</button>
+                </form>
+
+            </div>
+
+
+        </div>
+
+
+
     </main>
     <footer class="footer"> <span> I am footer!</span>
         <footer>
