--- a/index.html
+++ b/index.html
@@ -18,34 +18,35 @@
     </header>
 
     <main class="main">
-        <div class="signup-cards">
+
+        <div class="centerflex">
+            <button> Play</button>
+        </div>
+
+        <div class="centerflex">
             <div class="start-card">
 
                 <form id="form" action="submit">
                     <span> Enter your name!</span>
+                    <span> Player One/Two</span>
                     <input type="text" required>
-                    <input type="radio" name="icon" id="" required>
-                    <input type="radio" name="icon" id="">
-                    <input type="radio" name="icon" id="">
-                    <input type="radio" name="icon" id="">
+                    <div class="xo">
+                        <input type="radio" name="xo">
+                        <input type="radio" name="xo">
+                    </div>
+
+                    <div class="icon-form">
+                        <input type="radio" name="icon" id="" required>
+                        <input type="radio" name="icon" id="">
+                        <input type="radio" name="icon" id="">
+                        <input type="radio" name="icon" id="">
+                    </div>
                     <button type="submit"> Ready</button>
                 </form>
 
             </div>
 
-            <div class="start-card">
 
-                <form id="form" action="submit">
-                    <span> Enter your name!</span>
-                    <input type="text" required>
-                    <input type="radio" name="icon" id="" required>
-                    <input type="radio" name="icon" id="">
-                    <input type="radio" name="icon" id="">
-                    <input type="radio" name="icon" id="">
-                    <button type="submit"> Ready</button>
-                </form>
-
-            </div>
 
 
         </div>
