--- a/index.html
+++ b/index.html
@@ -29,17 +29,18 @@
                 <form id="form" action="submit">
                     <span> Enter your name!</span>
                     <span> Player One/Two</span>
-                    <input type="text" required>
+                    <input type="text" name="playerName">
                     <div class="xo">
                         <input type="radio" name="xo">
                         <input type="radio" name="xo">
                     </div>
 
                     <div class="icon-form">
-                        <input type="radio" name="icon" id="" required>
-                        <input type="radio" name="icon" id="">
-                        <input type="radio" name="icon" id="">
-                        <input type="radio" name="icon" id="">
+                        <!-- MAKE THINGS REQUIRED -->
+                        <input type="radio" name="icon" id="" value="cock">
+                        <input type="radio" name="icon" id="" value="lock">
+                        <input type="radio" name="icon" id="" value="asd">
+                        <input type="radio" name="icon" id="" value="asdas">
                     </div>
                     <button type="submit"> Ready</button>
                 </form>
