working on player logic + dom logic

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
                     <div class="icon-form">
                         <!-- MAKE THINGS REQUIRED -->
-                        <input type="radio" name="icon" id="" value="cock">
-                        <input type="radio" name="icon" id="" value="lock">
-                        <input type="radio" name="icon" id="" value="asd">
-                        <input type="radio" name="icon" id="" value="asdas">
+                        <input type="button" value="1">
+                        <input type="button" value="2">
+                        <input type="button" value="3">
+                        <input type="button" value="4">
                     </div>
                     <button type="submit"> Ready</button>
                 </form>
