input and cleaned up POC from JS

--- a/index.html
+++ b/index.html
@@ -30,19 +30,23 @@
                     <span> Enter your name!</span>
                     <span> Player One/Two</span>
                     <input type="text" name="playerName">
-                    <div class="xo">
-                        <input type="radio" name="xo">
-                        <input type="radio" name="xo">
-                    </div>
-
-                    <div class="icon-form">
-                        <!-- MAKE THINGS REQUIRED -->
-                        <input type="button" value="1">
-                        <input type="button" value="2">
-                        <input type="button" value="3">
-                        <input type="button" value="4">
-                    </div>
+                    <input type="hidden" name="symbol" id="symbol" value="X">
+                    <input type="hidden" name="icon" id="icon" value="1">
                     <button type="submit"> Ready</button>
+                        <input type="button"> 
+                        <div id="icons">
+                            <input type="button" name="icon1"> 
+                            <input type="button" name="icon2">
+                            <input type="button" name="icon3">
+                            <input type="button" name="icon4">
+                        </div>
+                     
+                </form>
+
+
+
+
+
                 </form>
 
             </div>
