form works and adds up to two players

--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
         <h4> Sam's Tic Tac Toe</h4>
         <a>New Game</a>
     </header>
-
+ 
     <main class="main">
 
-        <div class="centerflex">
-            <button> Play</button>
-        </div>
 
         <div class="centerflex">
             <div class="start-card">
@@ -30,33 +27,20 @@
                     <span> Enter your name!</span>
                     <span> Player One/Two</span>
                     <input type="text" name="playerName">
-                    <input type="hidden" name="symbol" id="symbol" value="X">
-                    <input type="hidden" name="icon" id="icon" value="1">
+                    <!-- <input type="hidden" name="symbol" id="symbol" value="X">
+                    <input type="hidden" name="icon" id="icon" value="1"> -->
                     <button type="submit"> Ready</button>
-                        <input type="button"> 
+                        <!-- <input type="button"> 
                         <div id="icons">
                             <input type="button" name="icon1"> 
                             <input type="button" name="icon2">
                             <input type="button" name="icon3">
-                            <input type="button" name="icon4">
-                        </div>
-                     
+                            <input type="button" name="icon4"> -->
+                        </div>         
                 </form>
-
-
-
-
-
                 </form>
-
             </div>
-
-
-
-
         </div>
-
-
 
     </main>
     <footer class="footer"> <span> I am footer!</span>
