things sort of work

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
         <div class="centerflex">
-            <div class="start-card">
+            <div class="start-card" id="formContainer">
 
                 <form id="form" action="submit">
                     <span> Enter your name!</span>
@@ -32,7 +32,7 @@
                 </form>
 
                 
-                    <div class="board" id="board">
+                    <div class="hideClass board" id="board">
                      
                             <div value="1" class="cell"></div>
                             <div value="2" class="cell"></div>
@@ -55,6 +55,5 @@
         <footer>
 
 </body>
-<script type="module" src="app.js"></script>
-
+<script src="app.js"></script>
 </html>
