--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </form>
 
                 
-                    <div class="board hideClass" id="board">
+                    <div class="hideClass board" id="board">
                      
                             <div value="1" class="cell"></div>
                             <div value="2" class="cell"></div>
