the game is now offical in alpha

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                         </div>         
                 </form>
 
-                
+                <h2 id="winnerCard" class="hideClass"></h2>
                     <div class="hideClass board" id="board">
-                     
+
                             <div value="1" class="cell"></div>
                             <div value="2" class="cell"></div>
                             <div value="3" class="cell"></div>
