player card bugs

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                         <div id="playerCards" >
                             <div class="playerCard" id="playerCardOne">
                                 <p>Name:<span></span></p>
-                                <p>Score:<span></span></p>
+                                <p>Score:<span id="scoreOne"></span></p>
                             </div>
     
                             <div class="playerCard" id="playerCardTwo">
                                 <p>Name:<span></span></p>
-                                <p>Score:<span></span></p>
+                                <p>Score:<span id="scoreTwo"></span></p>
                             </div>
                         </div>
            
