player card works

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                         <button id="rematch-btn" class="btn"> Rematch?</button>
                     </div>
                 </div>
-                    <div>
-
-                        <div id="playerCards" >
+                    <div class="game-board">
+                        
+                        <div id="playerCards" class="playerCards hideClass" >
                             <div class="playerCard" id="playerCardOne">
                                 <p>Name:<span></span></p>
                                 <p>Score:<span id="scoreOne"></span></p>
