--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="main">
 
 
-        <div class="centerflex">
+        <div class="centergrid">
             <div class="start-card" id="formContainer">
 
                 <form id="form" action="submit" class="centerflex">
@@ -34,7 +34,7 @@
                 <div id="winnerCard" class="winnerCard hideClass ">
                     <h1> And the winner is... <span id="winnerName"></span></h1>
                     <h1> Better luck next time <span id=loserName></span></h1>
-                    <div class="centerflex">
+                    <div class="centerflex" >
                         <button id="rematch-btn" class="btn"> Rematch?</button>
                     </div>
                 </div>
