--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header class="header">
         <h4> Sam's Tic Tac Toe</h4>
-        <a>New Game</a>
+        <a id="newGame">New Game</a>
     </header>
  
     <main class="main">
