--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
