The game is a tie works!

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                                 <p>Score:<span id="scoreTwo"></span></p>
                             </div>
                         </div>
-           
 
+                            <h1 class="announcement hideClass" id="announcement"></h1>
                         <div class="board hideClass" id="board">
 
                             <div value="1" class="cell"></div>
