--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
                 <form id="form" action="submit" class="centerflex">
                     <span> Enter your name!</span>
-                    <span> Player One/Two</span>
-                    <input type="text" name="playerName">
+                   
+                    <input type="text" min="3" max="15" required  name="playerName">
                     <button class="btn" type="submit"> Ready</button>
                         </div>         
                 </form>
